# python-fluente

./: .gitignore  pylama.ini  pyproject.toml
src/02-array-seq/: temp.py
src/11-iface-abc/: frenchdeck2.py
src/19-dyn-attr-prop/oscon/: test_schedule1.py
src/20-descriptor/bulkfood/: model_v5.py  model_v5_check.py
