[tool.poetry]
name = "python-fluente"
version = "0.1.0"
description = "livro Python Fluente (Luciano Ramalho)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pylama = "^7.7.1"
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
